opam-version: "2.0"
synopsis: "A minimal test framework for Melange"
description: "A minimal test framework for Melange using Node test runner"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "MIT"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
depends: [
  "ocaml"
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/your/project.git"
