opam-version: "2.0"
synopsis: "A minimal test framework for Melange"
description: "A minimal test framework for Melange using Node test runner"
maintainer: [
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
authors: [
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/jchavarri/melange-fest"
bug-reports: "https://github.com/jchavarri/melange-fest/issues"
dev-repo: "git+https://github.com/jchavarri/melange-fest.git"
depends: [
  "ocaml"
  "dune" {>= "3.8"}
  "melange"
  "reason" {with-test}
  "reason-react" {with-test}
  "reason-react-ppx" {with-test}
  "melange-testing-library" {with-test}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
