opam-version: "2.0"
synopsis: "A minimal test framework for Melange"
description: "A minimal test framework for Melange using Node test runner"
maintainer: [
  "Feihong Hsu <feihong.hsu@ahrefs.com>"
  "Javier Chávarri <javier.chavarri@ahrefs.com>"
]
authors: [
  "Feihong Hsu <feihong.hsu@ahrefs.com>"
  "Javier Chávarri <javier.chavarri@ahrefs.com>"
]
tags: ["melange" "node" "org:ahrefs"]
license: "MIT"
homepage: "https://github.com/ahrefs/melange-fest"
bug-reports: "https://github.com/ahrefs/melange-fest/issues"
dev-repo: "git+https://github.com/ahrefs/melange-fest.git"
depends: [
  "ocaml"
  "dune" {>= "3.8"}
  "melange" {>= "3.0"}
  "reason" {with-test}
  "reason-react" {with-test}
  "reason-react-ppx" {with-test}
  "melange-testing-library" {with-test}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
  "ocamlformat" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
