(melange.emit
 (target node)
 (alias main)
 (libraries
  melange-fest
  melange-fest.dom
  melange-testing-library.dom
  melange-testing-library.react)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems
  (es6 mjs)))

(rule
 (alias runtest)
 (deps
  (:input ./node/test/bindings.mjs))
 (action
  (run node %{input})))

(rule
 (alias runtest)
 (deps
  (alias_rec main)
  (:input ./node/test/components.mjs))
 (action
  (run node %{input})))
